Make sure pk updates don't go out of sync

Listen to all updates request transactions and update the values
accordingly.

BUG: 385754